# DailyDefense

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.cloudflared.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: auth.py  config.py  main.py
app/game/: daily.py  scores.py
app/routes/: game.py  health.py  wiki.py
app/static/: game.js  index.html  style.css  wiki.css
docs/: CHANGELOG-v0.md  CHANGELOG-v1.md  README.md  TODO.md
